Update hero image, make font legible, fix header

--- a/modified.css
+++ b/modified.css
@@ -27,36 +27,38 @@ a:hover {
 }
 
 p {
-	margin: 0 5% 5% auto;
+	margin: 0 5% 2% auto;
     width: 90%;
 }
 
 div {
-/*	top: 0;*/
 }
 
 header {
 	background-color: white;
-	box-shadow: 0px 5px 3px grey;
-    height: 20vh;
-    line-height: 50%;
+    height: 4em;
+    margin-right: auto;
+    margin-left: auto;
     position: fixed;
     top: 0;
     vertical-align: 50%;
     width:100%;
-    margin-right: auto;
-    margin-left: auto;
     
 }
 
 header h1 {
     font-weight: bold;
     text-align: right;
+    height: 40px;
+    margin: .1em 0 0 0;
 }
 
 header h2{
     font-weight: normal;
     text-align: right;
+    height: 50px;
+    margin: 0;
+}
 }
 
 .page-wrapper {
@@ -70,13 +72,16 @@ header h2{
 .summary {
 	background-image: url('./img/space-station.jpg');
 	background-size: 100% 100%;
-	height: 30vh;
-    font-style: italic;
+	height: 0%;     
     color: white;
-    margin-top: 4.5em;
+    margin-top: 8%;
 	padding-top: 30%;
 }
-
+.summary p {
+    width: 65%;
+    margin-left: 2%;
+    text-shadow: 1px 1px grey;
+}
 #zen-summary {
 /*	height: 50%;*/
 }
